<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/description_scroll_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/recipe_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/ingredients_description"
            tools:src="@drawable/baking_placeholder"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/ingredients_card_view"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="40dp"
            card_view:cardCornerRadius="4dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                        <TextView
                            android:id="@+id/ingredients_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ingredients_title"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            android:padding="10dp"
                            android:textSize="24sp"/>

                        <TextView
                            android:id="@+id/recipe_servings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:layout_gravity="center"
                            android:paddingBottom="15dp"
                            android:textSize="18sp"
                            tools:text="Servings: 8"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recipe_ingredients_recycler"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"/>

                </LinearLayout>

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/steps_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:padding="10dp"
            android:text="@string/steps_title"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_description_recycler"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:adjustViewBounds="true"/>

    </LinearLayout>

</ScrollView>